--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
              <!-- create brand -->
              <a href="" class="navbar-brand text-warning font-weight-bold">
-               IHUBTALENT 
+               MD VAISH KARNI
              </a>       
              <!-- create navbar button-->
 <button class="navbar-toggler" type="button" data-toggle="collapse"  data-target="#collapsenavbar">
@@ -245,9 +245,9 @@
         <div class="col-lg-4 col-md-4 col-sm-4 d-block m-auto">
             <figure class="figure">
                 <!-- image -->
-<img src="images/team/team1.jpeg" class="figure-img img-fluid rounded-circle"/>
+<img src="md_vaish-removebg-preview-modified.png" class="figure-img img-fluid rounded-circle"/>
             <figcaption>
-                <h4>Alan Morries</h4>
+                <h4>MD VAISH KARNI</h4>
                 <p class="figure-caption">Lead Designer</p>
             </figcaption>
             </figure>
@@ -257,9 +257,9 @@
         <div class="col-lg-4 col-md-4 col-sm-4 d-block m-auto">
             <figure class="figure">
                 <!-- image -->
-<img src="images/team/team1.jpeg" class="figure-img img-fluid rounded-circle"/>
+<img src="md_vaish-removebg-preview-modified.png" class="figure-img img-fluid rounded-circle"/>
             <figcaption>
-                <h4>Erick Anderson</h4>
+                <h4>MD VAISH KARNI</h4>
                 <p class="figure-caption">Team Lead</p>
             </figcaption>
             </figure>
@@ -269,9 +269,9 @@
         <div class="col-lg-4 col-md-4 col-sm-4 d-block m-auto">
             <figure class="figure">
                 <!-- image -->
-<img src="images/team/team1.jpeg" class="figure-img img-fluid rounded-circle"/>
+<img src="md_vaish-removebg-preview-modified.png" class="figure-img img-fluid rounded-circle"/>
             <figcaption>
-                <h4>Anna Julie</h4>
+                <h4>MD VAISH KARNI</h4>
                 <p class="figure-caption">Manager</p>
             </figcaption>
             </figure>
@@ -285,7 +285,7 @@
 
 <!-- ////////////// footer //////////-->
 <footer class="footer bg-dark">
-    <h6 class="text-center text-white">Copyright @ 2020,Design by IHUBTalent</h6>
+    <h6 class="text-center text-white">Copyright @ 2024,Design by MD VAISH KARNI</h6>
 </footer>
     </body>
 </html>
