Your commit message

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
         <!-- add MetaData -->
 <meta charset="UTF-8">
-<meta name="description" content="It is IHUB TALENT UI Project">
+<meta name="description" content="It is MD VAISH KARNI UI Project">
 <meta name="keywords" content="HTML,CSS,JS,BOOTSTRAP,JQUERY">
-<meta name="author" content="IHUB TALENT Project Development Team">
+<meta name="author" content="MD VAISH KARNI  Project Development Team">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta name="copyright" content="copyright by GlobalEdx">
 
